Complete through Part 3

--- a/src/Blogger/BlogBundle/Resources/config/routing.yml
+++ b/src/Blogger/BlogBundle/Resources/config/routing.yml
@@ -16,4 +16,11 @@ BloggerBlogBundle_contact:
     pattern: /contact
     defaults: { _controller: BloggerBlogBundle:Page:contact }
     requirements:
+        methods: GET|POST
+        
+BloggerBlogBundle_blog_show:
+    pattern: /{id}
+    defaults: { _controller: BloggerBlogBundle:Blog:show }
+    requirements:
         methods: GET
+        id: \d+
