--- a/src/Blogger/BlogBundle/Resources/config/routing.yml
+++ b/src/Blogger/BlogBundle/Resources/config/routing.yml
@@ -24,3 +24,10 @@ BloggerBlogBundle_blog_show:
     requirements:
         methods: GET
         id: \d+
+        
+BloggerBlogBundle_comment_create:
+    pattern: /comment/{blog_id}
+    defaults: { _controller: BloggerBlogBundle:Comment:create }
+    requirements:
+        methods: POST
+        blog_id: \d+
