--- a/src/Blogger/BlogBundle/Resources/config/routing.yml
+++ b/src/Blogger/BlogBundle/Resources/config/routing.yml
@@ -19,7 +19,7 @@ BloggerBlogBundle_contact:
         methods: GET|POST
         
 BloggerBlogBundle_blog_show:
-    pattern: /{id}
+    pattern: /{id}/{slug}
     defaults: { _controller: BloggerBlogBundle:Blog:show }
     requirements:
         methods: GET
